docs/api/qiskit/0.29/qiskit.circuit.library.IGate.md
---
title: IGate
description: API reference for qiskit.circuit.library.IGate
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.IGate
---

# IGate

<span id="qiskit.circuit.library.IGate" />

`IGate(label=None)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/circuit/library/standard_gates/i.py "view source code")

Bases: `qiskit.circuit.gate.Gate`

Identity gate.

Identity gate corresponds to a single-qubit gate wait cycle, and should not be optimized or unrolled (it is an opaque gate).

**Matrix Representation:**

$$
\begin{split}I = \begin{pmatrix}
        1 & 0 \\
        0 & 1
    \end{pmatrix}\end{split}
$$

**Circuit symbol:**

```python
     ┌───┐
q_0: ┤ I ├
     └───┘
```

Create new Identity gate.

## Methods Defined Here

### inverse

<span id="qiskit.circuit.library.IGate.inverse" />

`IGate.inverse()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/circuit/library/standard_gates/i.py "view source code")

Invert this gate.

## Attributes

<span id="qiskit.circuit.library.IGate.decompositions" />

### decompositions

Get the decompositions of the instruction from the SessionEquivalenceLibrary.

<span id="qiskit.circuit.library.IGate.definition" />

### definition

Return definition in terms of other basic gates.

<span id="qiskit.circuit.library.IGate.duration" />

### duration

Get the duration.

<span id="qiskit.circuit.library.IGate.label" />

### label

Return instruction label

**Return type**

`str`

<span id="qiskit.circuit.library.IGate.params" />

### params

return instruction params.

<span id="qiskit.circuit.library.IGate.unit" />

### unit

Get the time unit of duration.

